--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
   <div class="footer">
     Генерация происходит локально в браузере (без сервера). Используется Web Crypto API для крипто-стойкого случайного выбора.
+    
+    Сделано Максимом Ташкиным с душой)
   </div>
 </div>
 
@@ -178,4 +180,5 @@
 </script>
 </body>
 </html>
+
 
