--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 
   <div class="footer">
     Генерация происходит локально в браузере (без сервера). Используется Web Crypto API для крипто-стойкого случайного выбора.
-    
-    Сделано Максимом Ташкиным с душой)
+       Сделано Ташкиным Максимом 9"В" 
   </div>
 </div>
 
@@ -180,5 +179,6 @@
 </script>
 </body>
 </html>
+
 
 
