--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Генератор паролей — от максима</title>
+<title>Я боюсь женщин, ААААААААА помогите</title>
 <style>
   body{font-family:Inter,system-ui,Segoe UI,Arial;margin:24px;background:#0f1720;color:#e6eef8}
   .card{max-width:720px;margin:0 auto;padding:20px;border-radius:12px;background:linear-gradient(180deg,#111827, #0b1220);box-shadow:0 6px 30px rgba(2,6,23,.6)}
@@ -179,6 +179,7 @@
 </script>
 </body>
 </html>
+
 
 
 
